--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,51 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+<ion-content class="bgView" >
+    <img src="assets/imgs/bg_marca_dagua.png">
+
+<ion-header >
+
+  <ion-navbar color="prime">
+    <span class="pull-left">
+      <ion-icon name="menu"></ion-icon>
+    </span>
+    <span class="title">RastaAppé</span>
   </ion-navbar>
+
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+<ion-content >
+
 </ion-content>
+<ion-menu [content]="content" class="sidebar">
+  <ion-header class="card-background-page">
+      <img src="assets/imgs/cardperfil.png">
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <button ion-item>
+          <ion-icon name="contact" class="icon-menu">Perfil</ion-icon> 
+      </button>
+      <button ion-item>
+          <ion-icon name="calendar" class="icon-menu"> Eventos</ion-icon> 
+      </button>
+      <button ion-item>
+          <ion-icon name="paw" class="icon-menu"> Aulas</ion-icon> 
+      </button>
+      <button ion-item>
+          <ion-icon name="chatbubbles" class="icon-menu"> Blog</ion-icon>        
+      </button>
+      <button ion-item>
+          <ion-icon name="shirt" class="icon-menu">Loja</ion-icon>         
+      </button>
+      <button ion-item>
+          <ion-icon name="reorder" class="icon-menu">Sobre</ion-icon>        
+      </button>
+      <button ion-item>
+          <ion-icon name="ribbon" class="icon-menu">PREMIUM</ion-icon>        
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+</ion-content>
+
+<ion-nav id="nav" #content [root]=""></ion-nav>
