popup lista estilizado

--- a/src/pages/eventos/eventos.html
+++ b/src/pages/eventos/eventos.html
@@ -73,7 +73,7 @@
                                 <div class="div-check">
                                     <ion-item color="prime">
                                         <ion-checkbox checked="true"></ion-checkbox>
-                                    </ion-item>
+                                    </ion-item> 
                                 </div>
                             </button>
                             <button ion-fab class="btn-fab-evento" color="prime" (click)="AlertNomelista()">
@@ -186,7 +186,7 @@
                                             </ion-card-content>
                                             </ion-card>
                                         </div>                                    
-                                                <ion-badge class="badge-conteudo"> 500  <ion-icon name="checkmark-circle"></ion-icon> </ion-badge>                                     
+                                                <!--<ion-badge class="badge-conteudo"> 500  <ion-icon name="checkmark-circle"></ion-icon> </ion-badge>                                     -->
 
                                     </ion-card-content>
 
