--- a/src/pages/modal-map/modal-map.html
+++ b/src/pages/modal-map/modal-map.html
@@ -6,7 +6,7 @@
     Localização
   </ion-card-header>
   <ion-card-content>
-    <img src="../../assets/imgs/local.png" >
+    <img src="{{local.mapa}}">  <!--../../assets/imgs/local.png" >-->
   </ion-card-content>
   <ion-footer class="footermodal">   
     <button ion-button class="btn-modal " round (click)="fecharMapa()" >
