--- a/src/pages/eventos/eventos.html
+++ b/src/pages/eventos/eventos.html
@@ -21,7 +21,7 @@
                     <ion-icon name="md-calendar"></ion-icon>
                 </button>
             </ion-fab>
-            <ion-card class="card_slide_geral">
+            <ion-card class="card_slide">
                 <ion-slides pager="true" autoplay="3000" loop="true" speed="500">
 
                     <ion-slide *ngFor="let item of itensSlide">
