--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -35,4 +35,4 @@
         </ion-toolbar>
     </ion-footer>
     <ion-menu>
-    <ion-nav id="nav" #content [root]="rootPage"></ion-nav>
+        <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
