--- a/src/pages/eventos/eventos.html
+++ b/src/pages/eventos/eventos.html
@@ -22,34 +22,14 @@
                 </button>
             </ion-fab>
             <ion-card class="card_slide_geral">
-            <ion-slides pager="true" autoplay="3000" loop="true" speed="500">
+                <ion-slides pager="true" autoplay="3000" loop="true" speed="500">
+                    <ion-slide *ngFor="let item of itensSlide">
+                        <ion-card class="card_slide">
+                            <img src="{{item.banner}}" class="img_slide" />
+                        </ion-card>
+                    </ion-slide>
+                </ion-slides>
 
-                <ion-slide>
-                    <ion-card class="card_slide">
-                        <img src="../../assets/imgs/1.jpg" alt="" class="img_slide" />
-                    </ion-card>
-                </ion-slide>
-
-                <ion-slide>
-                    <ion-card class="card_slide">
-                        <img src="../../assets/imgs/2.jpg" class="img_slide" />
-                    </ion-card>
-                </ion-slide>
-
-                <ion-slide>
-                    <ion-card class="card_slide">
-                        <img src="../../assets/imgs/3.jpg" class="img_slide" />
-                    </ion-card>
-                </ion-slide>
-                <ion-slide>
-                    <ion-card class="card_slide">
-                        <img src="../../assets/imgs/4.jpg" class="img_slide" />
-                    </ion-card>
-                </ion-slide>
-
-            </ion-slides>
-
-            
             </ion-card>
             <ion-card class="card-itens">
                 <ion-grid no-padding>
