--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,51 +1,42 @@
-<ion-content class="bgView" >
-    <img src="assets/imgs/bg_marca_dagua.png">
+<ion-menu [content]="content">
 
-<ion-header >
+    <ion-header class="card-background-page ">
+        <ion-navbar color="prime" class="nav-titulo">
+            <ion-title class="menu_header"> RastaAppé</ion-title>
+        </ion-navbar>
+        <ion-card class="card-perfil">
+            <div class="photo-menu">
+                <div class="ft-perfil">
+                    <img class="avatar" style="position:relative;  z-index: 1;" src="../../assets/imgs/perfil.jpg">
+                    <img class="avatar-grupo" style="position:absolute; z-index: 2;" src="../../assets/imgs/perfil_grupo.jpg">
+                </div>
+            </div>
+            <div class="card-title">Igão</div>
+            <div class="card-subtitle">ursovaca@f4mail.com</div>
 
-  <ion-navbar color="prime">
-    <span class="pull-left">
-      <ion-icon name="menu"></ion-icon>
-    </span>
-    <span class="title">RastaAppé</span>
-  </ion-navbar>
+        </ion-card>
+    </ion-header>
+    <ion-content class="card-background-page">
+        <ion-list>
+            <ion-item *ngFor="let p of pages">
+                <button menuClose ion-item (click)="openPage(p)" class="button_list_menu">
+                    <ion-icon name="{{p.icon}}" class="icon-menu">
+                        <span class="fonte-menu"> {{p.title}}</span>
+                    </ion-icon>
+                </button>
+            </ion-item>
+        </ion-list>
+    </ion-content>
+    <ion-footer>
+        <ion-toolbar color="primary">
+            <ion-title class="title_rodape ">
+                <span> Seja um Produtor</span>
+                <ion-icon name="ribbon" class="icon-menu-premium">
+                </ion-icon>
+            </ion-title>
+        </ion-toolbar>
+    </ion-footer>
 
-</ion-header>
+    <ion-menu>
 
-
-<ion-content >
-
-</ion-content>
-<ion-menu [content]="content" class="sidebar">
-  <ion-header class="card-background-page">
-      <img src="assets/imgs/cardperfil.png">
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <button ion-item>
-          <ion-icon name="contact" class="icon-menu">Perfil</ion-icon> 
-      </button>
-      <button ion-item>
-          <ion-icon name="calendar" class="icon-menu"> Eventos</ion-icon> 
-      </button>
-      <button ion-item>
-          <ion-icon name="paw" class="icon-menu"> Aulas</ion-icon> 
-      </button>
-      <button ion-item>
-          <ion-icon name="chatbubbles" class="icon-menu"> Blog</ion-icon>        
-      </button>
-      <button ion-item>
-          <ion-icon name="shirt" class="icon-menu">Loja</ion-icon>         
-      </button>
-      <button ion-item>
-          <ion-icon name="reorder" class="icon-menu">Sobre</ion-icon>        
-      </button>
-      <button ion-item>
-          <ion-icon name="ribbon" class="icon-menu">PREMIUM</ion-icon>        
-      </button>
-    </ion-list>
-  </ion-content>
-</ion-menu>
-</ion-content>
-
-<ion-nav id="nav" #content [root]=""></ion-nav>
+        <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
